--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <div class="footer">
-   <div class="container">
-      <p class="copy">&copy; {{ site.time | date: '%Y' }} <a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+   <div class="container footer-text">
+      <p class="copy">&copy; {{ site.time | date: '%Y' }} Sarah Pullman</p>
 
-      <div class="footer-links"> 
+      <!-- <div class="footer-links"> 
          <ul class="noList"> 
             {% if site.social.facebook %}
             <li><a href="https://www.facebook.com/{{ site.social.facebook }}">
@@ -33,7 +33,7 @@
             </a></li>
             {% endif %}
          </ul>
-      </div>
+      </div> -->
    </div>
 </div><!-- end .footer -->
 
