--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -286,6 +286,15 @@ POST STYLING
 			margin-bottom: 0;
 		}
 	}
+
+	p {
+		margin-bottom: 15px !important;
+	}
+
+	.pageTitle {
+		margin-bottom: 20px !important;
+	}
+
 }
 
 
@@ -486,4 +495,3 @@ POST LIST STYLING
 		}
 	}
 }
-
