--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -52,4 +52,4 @@ TYPE SETTINGS
 ***************/
 
 $sans-serif: "Open Sans", Helvetica, Arial, sans-serif;
-$serif: "PT Serif", Georgia, Times, serif;
+$serif: "Dosis", Georgia, Times, serif;
