--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <div class="footer">
-   <div class="container footer-text">
-      <p class="copy">&copy; {{ site.time | date: '%Y' }} Sarah Pullman</p>
+
+   <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+               <p class="copy footer-border">&copy; {{ site.time | date: '%Y' }} Sarah Pullman</p>
 
       <!-- <div class="footer-links"> 
          <ul class="noList"> 
@@ -34,6 +37,9 @@
             {% endif %}
          </ul>
       </div> -->
+      </div>
+      </div>
+      </div>
    </div>
 </div><!-- end .footer -->
 
