--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,22 @@
  <div class="header">
      <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-         <nav class="nav-collapse">
-             <ul class="noList">
-                 {% for link in site.navigation %}
-                    {% assign current = nil %}
-                    {% if page.url contains link.url %}
-                        {% assign current = 'current' %}
-                    {% endif %}
-                    <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
-                        <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title | upcase }}</a>
-                    </li>
-                 {% endfor %}
-             </ul>
-         </nav>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+                <nav class="nav-collapse">
+                    <ul class="noList">
+                        {% for link in site.navigation %}
+                            {% assign current = nil %}
+                            {% if page.url contains link.url %}
+                                {% assign current = 'current' %}
+                            {% endif %}
+                            <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
+                                <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title | upcase }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </nav>
+            </div>
+         </div>
      </div>
  </div><!-- end .header -->
