--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
  <div class="header">
      <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-10 col-md-offset-1">
                 <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
                 <nav class="nav-collapse">
                     <ul class="noList">
                         {% for link in site.navigation %}
                             {% assign current = nil %}
-                            {% if page.url contains link.url %}
+                            {% if page.url == link.url %}
+                                {% assign current = 'current' %}
+                            {% elsif page.url == '/index.html' and link.url == '/' %}
                                 {% assign current = 'current' %}
                             {% endif %}
                             <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
